# Bridge-Pool-assignment-Parser-

./: .env  .gitignore  Cargo.toml  README.md  local_bridges.csv
src/: config.rs  error.rs  lib.rs  main.rs
src/collector/: fetch.rs  local.rs  mod.rs
src/exporter/: csv.rs  mod.rs  parquet.rs  pg.rs
src/helper/: digest.rs  mod.rs
src/transformer/: mod.rs  parser.rs
test_data/: test1.txt
tests/: parser_test.rs
tests/common/: mod.rs
tests/integration/: mod.rs
