[package]
name = "bridge-parser"
version = "0.1.0"
authors = ["Harshita roonwal"]
edition = "2021"
description = "A Tor BridgeDB assignment parser"

[lib]
name = "bridge_parser"
path = "src/lib.rs"

[[bin]]
name = "bridge-parser"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "=0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
flate2 = "1.0"
xz2 = "0.1"
csv = "1.3"
dotenvy = "0.15"
sha2 = "0.10"
hex = "0.4"
tokio-retry = "0.3"
arrow = { version = "42.0.0", default-features = false, features = ["csv"], optional = true }
parquet = { version = "42.0.0", default-features = false, features = ["arrow"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
parquet_export = ["arrow", "parquet"]
